--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <body>
 
   <header>
-    <img class="logo" src="Logo.png" alt="Sterling Legal Advisory LLP Logo" onerror="this.onerror=null; this.src='Logo1.png';">
+    <img class="logo" src="Logo.jpg" alt="Sterling Legal Advisory LLP Logo" onerror="this.onerror=null; this.src='Logo1.png';">
     <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('active')">
       <span></span><span></span><span></span>
     </div>
