--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
   <a href="#main-content" class="skip-link">Skip to main content</a>
 
   <header>
-    <img class="logo" src="Logo.png" alt="Sterling Legal Advisory LLP Logo" onerror="this.onerror=null; this.src='Logo1.png';">
+    <img class="logo" src="Logo.jpg" alt="Sterling Legal Advisory LLP Logo" onerror="this.onerror=null; this.src='Logo1.png';">
     <button class="menu-toggle" aria-label="Toggle navigation menu" aria-expanded="false">
       <span></span>
       <span></span>
