--- a/helen-rowe.html
+++ b/helen-rowe.html
@@ -173,7 +173,7 @@
         
         <div class="profile-section">
           <h2>Contact</h2>
-          <p>Email: <a href="mailto:h.rowe@sterlinglegal.uk">h.rowe@sterlinglegal.uk</a></p>
+          <p>Email: <a href="mailto:helenm.rowe@hotmail.com">h.helenm.rowe@hotmail.com</a></p>
         </div>
       </div>
     </div>
