--- a/index.html
+++ b/index.html
@@ -659,20 +659,26 @@
           <p>Associate Lawyer — Financial Disputes & Asset Protection</p>
         </div>
         <div class="member" onclick="window.location.href='sophie-williams.html'">
-  <img src="SophieWilliams.jpg" alt="Sophie Williams" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-  <h3>Sophie Williams</h3>
-  <p>Partner — International Transactions & Investments</p>
+          <img src="SophieWilliams.jpg" alt="Sophie Williams" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Sophie Williams</h3>
+          <p>Partner — International Transactions & Investments</p>
         </div>
         <div class="member" onclick="window.location.href='maria-petrova.html'">
-  <img src="MariaPetrova.jpg" alt="Maria Petrova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-  <h3>Maria Petrova</h3>
-  <p>Counsel — Arbitration & Offshore Jurisdictions</p>
-</div>
-          <div class="member" onclick="window.location.href='kenji-tanaka.html'">
-  <img src="KenjiTanaka.jpg" alt="Kenji Tanaka" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-  <h3>Kenji Tanaka</h3>
-  <p>Of Counsel — Trust Structures & Tax Planning</p>
-</div>
+          <img src="MariaPetrova.jpg" alt="Maria Petrova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Maria Petrova</h3>
+          <p>Counsel — Arbitration & Offshore Jurisdictions</p>
+        </div>
+        <!-- David Smith добавлен здесь -->
+        <div class="member" onclick="window.location.href='david-smith.html'">
+          <img src="DavidSmith.jpg" alt="David Smith" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>David Smith</h3>
+          <p>Partner — Corporate Investigations & Compliance</p>
+        </div>
+        <div class="member" onclick="window.location.href='kenji-tanaka.html'">
+          <img src="KenjiTanaka.jpg" alt="Kenji Tanaka" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Kenji Tanaka</h3>
+          <p>Of Counsel — Trust Structures & Tax Planning</p>
+        </div>
         <div class="member" onclick="window.location.href='alexei-morozov.html'">
           <img src="AlexeiMorozov.jpg" alt="Alexei Morozov" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
           <h3>Alexei Morozov</h3>
