--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Sterling Legal Advisory LLP | International Law Firm">
   <meta property="og:description" content="International legal services — disputes, arbitration, investigations, asset protection.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="Logo.png">
+  <meta property="og:image" content="Logo22.jpg">
   <meta property="og:url" content="https://sterlinglegal.uk">
   <meta property="og:site_name" content="Sterling Legal Advisory LLP">
 
