--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:title" content="Sterling Legal Advisory LLP | International Law Firm">
   <meta property="og:description" content="International legal services — disputes, arbitration, investigations, asset protection.">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="Logo45.jpg">
+  <meta property="og:image" content="Logo.png">
   <meta property="og:url" content="https://sterlinglegal.uk">
   <meta property="og:site_name" content="Sterling Legal Advisory LLP">
 
@@ -413,6 +413,27 @@
       opacity: 1;
     }
 
+    /* Expertise Image Section */
+    .expertise-image {
+      text-align: center;
+      margin: 40px 0;
+    }
+
+    .expertise-image img {
+      max-width: 800px;
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: var(--shadow);
+      margin: 0 auto;
+    }
+
+    .image-caption {
+      margin-top: 15px;
+      font-style: italic;
+      color: #666;
+      font-size: 14px;
+    }
+
     /* Contact Section */
     .contact {
       padding: 60px 20px;
@@ -570,7 +591,6 @@
       </div>
     </section>
 
-    <!-- Other sections remain the same -->
     <section id="about" class="container">
       <h2 class="section-title">About Us</h2>
       <p>Sterling Legal Advisory LLP combines international experience with a tailored approach to each client. We work with governments, financial institutions, and private businesses in over 20 jurisdictions. Our goal is to deliver practical solutions, defend your interests, and ensure legal security in complex environments.</p>
@@ -595,6 +615,12 @@
           <h3>Confidentiality</h3>
           <p>We guarantee complete protection of our clients' sensitive information.</p>
         </div>
+      </div>
+
+      <!-- Добавлено фото под секцией International Expertise -->
+      <div class="expertise-image">
+        <img src="internationalexpertise.jpg" alt="International Expertise - Sterling Legal Advisory LLP" onerror="this.onerror=null; this.src='https://via.placeholder.com/800x400';">
+        <div class="image-caption">Global Legal Excellence - Serving Clients Across Multiple Jurisdictions</div>
       </div>
     </section>
 
@@ -646,45 +672,45 @@
     </section>
 
     <section id="team" class="container">
-  <h2 class="section-title">Our Team</h2>
-  <div class="team">
-    <div class="member" onclick="window.location.href='helen-rowe.html'">
-      <img src="HelenMRowe.jpg" alt="Helen M. Rowe" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Helen M. Rowe</h3>
-      <p>Senior Lawyer — International Disputes & Arbitration</p>
-    </div>
-    <div class="member" onclick="window.location.href='anna-ivanova.html'">
-      <img src="AnnaIvanova.jpg" alt="Anna Ivanova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Anna Ivanova</h3>
-      <p>Associate Lawyer — Financial Disputes & Asset Protection</p>
-    </div>
-    <div class="member" onclick="window.location.href='sophie-williams.html'">
-      <img src="SophieWilliams.jpg" alt="Sophie Williams" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Sophie Williams</h3>
-      <p>Partner — International Transactions & Investments</p>
-    </div>
-    <div class="member" onclick="window.location.href='maria-petrova.html'">
-      <img src="MariaPetrova.jpg" alt="Maria Petrova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Maria Petrova</h3>
-      <p>Counsel — Arbitration & Offshore Jurisdictions</p>
-    </div>
-    <div class="member" onclick="window.location.href='david-smith.html'">
-      <img src="DavidSmith.jpg" alt="David Smith" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>David Smith</h3>
-      <p>Partner — Corporate Investigations & Compliance</p>
-    </div>
-    <div class="member" onclick="window.location.href='kenji-tanaka.html'">
-      <img src="KenjiTanaka.jpg" alt="Kenji Tanaka" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Kenji Tanaka</h3>
-      <p>Of Counsel — Trust Structures & Tax Planning</p>
-    </div>
-    <div class="member" onclick="window.location.href='alexei-morozov.html'">
-      <img src="AlexeiMorozov.jpg" alt="Alexei Morozov" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
-      <h3>Alexei Morozov</h3>
-      <p>Associate — Litigation & Asset Recovery</p>
-    </div>
-  </div>
-</section>
+      <h2 class="section-title">Our Team</h2>
+      <div class="team">
+        <div class="member" onclick="window.location.href='helen-rowe.html'">
+          <img src="HelenMRowe.jpg" alt="Helen M. Rowe" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Helen M. Rowe</h3>
+          <p>Senior Lawyer — International Disputes & Arbitration</p>
+        </div>
+        <div class="member" onclick="window.location.href='anna-ivanova.html'">
+          <img src="AnnaIvanova.jpg" alt="Anna Ivanova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Anna Ivanova</h3>
+          <p>Associate Lawyer — Financial Disputes & Asset Protection</p>
+        </div>
+        <div class="member" onclick="window.location.href='sophie-williams.html'">
+          <img src="SophieWilliams.jpg" alt="Sophie Williams" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Sophie Williams</h3>
+          <p>Partner — International Transactions & Investments</p>
+        </div>
+        <div class="member" onclick="window.location.href='maria-petrova.html'">
+          <img src="MariaPetrova.jpg" alt="Maria Petrova" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Maria Petrova</h3>
+          <p>Counsel — Arbitration & Offshore Jurisdictions</p>
+        </div>
+        <div class="member" onclick="window.location.href='david-smith.html'">
+          <img src="DavidSmith.jpg" alt="David Smith" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>David Smith</h3>
+          <p>Partner — Corporate Investigations & Compliance</p>
+        </div>
+        <div class="member" onclick="window.location.href='kenji-tanaka.html'">
+          <img src="KenjiTanaka.jpg" alt="Kenji Tanaka" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Kenji Tanaka</h3>
+          <p>Of Counsel — Trust Structures & Tax Planning</p>
+        </div>
+        <div class="member" onclick="window.location.href='alexei-morozov.html'">
+          <img src="AlexeiMorozov.jpg" alt="Alexei Morozov" onerror="this.onerror=null; this.src='https://via.placeholder.com/150';">
+          <h3>Alexei Morozov</h3>
+          <p>Associate — Litigation & Asset Recovery</p>
+        </div>
+      </div>
+    </section>
 
     <section id="contact" class="contact container">
       <h2 class="section-title">Contact Us</h2>
