--- a/index.html
+++ b/index.html
@@ -444,6 +444,27 @@
       line-height: 1.6;
     }
 
+    /* Expertise Image Section */
+    .expertise-image {
+      text-align: center;
+      margin: 40px 0 0 0;
+    }
+
+    .expertise-image img {
+      max-width: 800px;
+      width: 100%;
+      border-radius: 10px;
+      box-shadow: var(--shadow);
+      margin: 0 auto;
+    }
+
+    .image-caption {
+      margin-top: 15px;
+      font-style: italic;
+      color: #666;
+      font-size: 14px;
+    }
+
     /* Contact Section */
     .contact {
       padding: 60px 20px;
@@ -626,6 +647,12 @@
             <h3>Confidentiality Guaranteed</h3>
             <p>Your sensitive information is protected with the highest standards of confidentiality and data security.</p>
           </div>
+        </div>
+        
+        <!-- Добавлено фото под текстами Why Choose Us -->
+        <div class="expertise-image">
+          <img src="why-choose-us-image.jpg" alt="Why Choose Sterling Legal - International Legal Expertise" onerror="this.onerror=null; this.src='https://via.placeholder.com/800x400/002147/ffffff?text=Sterling+Legal+Advisory+LLP';">
+          <div class="image-caption">Global Legal Excellence - Trusted by Clients Worldwide</div>
         </div>
       </div>
     </section>
