--- a/index.html
+++ b/index.html
@@ -415,30 +415,30 @@
     }
 
     /* Why Choose Us Section */
-    .why-us {
-      background: #f8f9fa;
-      border-radius: 10px;
-      padding: 40px;
-      margin: 40px 0;
-    }
+.why-us {
+  background: #f8f9fa;
+  border-radius: 10px;
+  padding: 40px;
+  margin: 0; /* Убрали отступы */
+}
 
-    .why-us-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 30px;
-      margin-top: 30px;
-    }
+.why-us-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 30px;
+  margin-top: 30px;
+}
 
-    .why-us-item {
-      text-align: center;
-      padding: 25px;
-      background: white;
-      border-radius: var(--border-radius);
-      box-shadow: var(--shadow);
-      transition: var(--transition);
-      display: flex;
-      flex-direction: column;
-      height: 100%;
+.why-us-item {
+  text-align: center;
+  padding: 25px;
+  background: white;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow);
+  transition: var(--transition);
+  display: flex;
+  flex-direction: column;
+  height: 100%;
     }
 
     .why-us-item:hover {
