--- a/index.html
+++ b/index.html
@@ -724,24 +724,21 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
-        .social-links {
-            text-align: center;
-            margin-top: 2rem;
-        }
-
         .social-links a {
             display: inline-block;
             margin: 0 1rem;
             padding: 0.75rem 1.5rem;
-            background: var(--primary-color);
-            color: white;
+            background: transparent;
+            color: var(--primary-color);
+            border: 2px solid var(--primary-color);
             border-radius: var(--border-radius);
             transition: var(--transition);
             font-weight: 500;
         }
 
-        .social-links a:hover {
-            background: var(--accent-color);
+       .social-links a:hover {
+            background: var(--primary-color);
+            color: white;
             transform: translateY(-2px);
         }
 
