--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
     <meta property="og:site_name" content="Sterling Legal Advisory LLP">
 
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" as="style">
     <link rel="preload" href="Fon.jpg" as="image">
     <link rel="preload" href="Fon1.jpg" as="image">
     <link rel="preload" href="Fon2.jpg" as="image">
 
     <link rel="icon" type="image/png" href="favicon.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <style>
         /* CSS Variables for Consistent Design System */
@@ -57,7 +55,7 @@
         }
 
         body {
-            font-family: 'Roboto', sans-serif;
+            font-family: Georgia, serif;
             color: var(--text-color);
             line-height: 1.6;
             background: var(--text-light);
@@ -318,6 +316,7 @@
         }
 
         .hero h2 {
+            font-family: Georgia, serif;
             font-size: clamp(2rem, 5vw, 3rem);
             margin-bottom: 1.5rem;
             font-weight: 700;
@@ -325,6 +324,7 @@
         }
 
         .hero p {
+            font-family: Georgia, serif;
             margin: 0 auto 2rem;
             font-size: clamp(1.1rem, 2vw, 1.3rem);
             max-width: 600px;
@@ -332,6 +332,7 @@
         }
 
         .hero button {
+            font-family: Georgia, serif;
             font-size: 1.1rem;
             padding: 1rem 2rem;
             background-color: var(--accent-color);
@@ -385,6 +386,7 @@
         }
 
         h2.section-title {
+            font-family: Georgia, serif;
             color: var(--primary-color);
             text-align: center;
             margin-bottom: 3rem;
@@ -405,6 +407,7 @@
 
         /* About Section */
         .about-content {
+            font-family: Georgia, serif;
             max-width: 800px;
             margin: 0 auto;
             text-align: center;
@@ -441,6 +444,7 @@
         }
 
         .why-us-item h3 {
+            font-family: Georgia, serif;
             color: var(--primary-color);
             margin-bottom: 1rem;
             font-size: 1.4rem;
@@ -448,6 +452,7 @@
         }
 
         .why-us-item p {
+            font-family: Georgia, serif;
             color: var(--text-color);
             line-height: 1.7;
             margin-bottom: 1.5rem;
@@ -501,6 +506,7 @@
         }
 
         .service-item h3 {
+            font-family: Georgia, serif;
             color: var(--accent-color);
             margin-bottom: 1rem;
             font-size: 1.3rem;
@@ -508,6 +514,7 @@
         }
 
         .service-item p {
+            font-family: Georgia, serif;
             color: var(--text-color);
             line-height: 1.7;
         }
@@ -536,10 +543,12 @@
         }
 
         .news-item h3 {
+            font-family: Georgia, serif;
             margin-bottom: 1rem;
         }
 
         .news-item h3 a {
+            font-family: Georgia, serif;
             color: var(--primary-color);
             transition: var(--transition);
             font-size: 1.2rem;
@@ -551,12 +560,14 @@
         }
 
         .news-item p {
+            font-family: Georgia, serif;
             color: #666;
             line-height: 1.7;
             margin-bottom: 1rem;
         }
 
         .news-item time {
+            font-family: Georgia, serif;
             color: #999;
             font-size: 0.9rem;
             font-weight: 500;
@@ -604,6 +615,7 @@
         }
 
         .team-member h3 {
+            font-family: Georgia, serif;
             color: var(--primary-color);
             margin-bottom: 0.5rem;
             font-size: 1.2rem;
@@ -611,6 +623,7 @@
         }
 
         .team-member p {
+            font-family: Georgia, serif;
             color: #666;
             font-size: 0.95rem;
             margin-bottom: 1rem;
@@ -648,11 +661,13 @@
         }
 
         .contact-info p {
+            font-family: Georgia, serif;
             margin-bottom: 1rem;
             font-size: 1.1rem;
         }
 
         .contact-info a {
+            font-family: Georgia, serif;
             color: var(--accent-color);
             transition: var(--transition);
             font-weight: 500;
@@ -676,6 +691,7 @@
         }
 
         .form-group label {
+            font-family: Georgia, serif;
             display: block;
             margin-bottom: 0.5rem;
             font-weight: 600;
@@ -684,6 +700,7 @@
 
         .form-group input,
         .form-group textarea {
+            font-family: Georgia, serif;
             width: 100%;
             padding: 1rem;
             border: 2px solid #e9ecef;
@@ -706,6 +723,7 @@
         }
 
         .submit-btn {
+            font-family: Georgia, serif;
             width: 100%;
             padding: 1rem 2rem;
             background: var(--accent-color);
@@ -726,6 +744,7 @@
 
         
         .social-links a {
+            font-family: Georgia, serif;
             display: inline-block;
             margin: 0 1rem;
             padding: 0.75rem 1.5rem;
@@ -752,11 +771,13 @@
         }
 
         footer p {
+            font-family: Georgia, serif;
             margin-bottom: 1rem;
             opacity: 0.9;
         }
 
         footer a {
+            font-family: Georgia, serif;
             color: #c0c0c0;
             margin: 0 1rem;
             transition: var(--transition);
