--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, rgba(0, 33, 71, 0.8), rgba(0, 21, 46, 0.9));
+            /* Уменьшил прозрачность для более ярких изображений */
+            background: linear-gradient(135deg, rgba(0, 33, 71, 0.6), rgba(0, 21, 46, 0.7));
             z-index: -1;
         }
 
